# pat

./: .gitignore  README.md  pyproject.toml
pat/: __init__.py  __main__.py  pat.py
