[tool.poetry]
name = "pat"
version = "0.1.0"
description = "Python cAT"
authors = ["JnyJny <erik.oshaughnessy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
pat = "pat.__main__:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
